# oscbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  default-danser.json  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: docker-bake-branch.hcl.template  docker-bake-main.hcl.template  docker-build-image.yml  docker-image.yml  docker-runtime-image.yml
dev_scripts/: delete_gh_actions_caches.sh  delete_old_docker_images.sh  generate_entities.sh
docker/: entrypoint.sh
src/: defaults.rs  discord_helper.rs  embeds.rs  emojis.rs  main.rs  migrations.rs  roles.rs
src/apis/: catboy.rs  mod.rs  nerinyan.rs  osc_web.rs  sayobot.rs  youtube.rs
src/commands/: admin_commands.rs  dev_commands.rs  mod.rs  replay_commands.rs  skin_commands.rs  suggest_commands.rs  test_commands.rs
src/db/: mod.rs
src/events/: button_actions.rs  message_event.rs  mod.rs
src/events/background_tasks/: mod.rs  refresh_feed.rs
src/firebase/: score.rs  user.rs
src/generate/: danser.rs  thumbnail.rs  upload.rs  youtube_text.rs
src/osu/: mod.rs  pp_calculator.rs
