[package]
name = "oscbot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "process"]}
rosu-v2 = {version = "0.11.0", features = ["cache", "macros", "replay"]}
image = "0.25.9"
imageproc = "0.25.0"
reqwest = { version = "0.12.28", features = ["blocking", "native-tls"] }
ab_glyph = "0.2.32"
firebase-rs = "2.2.2"
time = "0.3.46"
osu-db = "0.3.0"
serde = "1.0.228"
serde_json = "1.0.148"
url = "2.5.7"
futures-util = "0.3.31"
dotenvy = "0.15.7"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
google-youtube3 = "6.0.0+20240626"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
quick-xml = "0.38.4"
anyhow = "1.0.100"
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
